# calcedit

./: .gitmodules  CMakeLists.txt  README.md  run.sh
calceditlib/: CMakeLists.txt
calceditlib/include/: calceditlib.h  complex_type.hpp
calceditlib/src/: calceditlib.cpp  exprtk_complex_adaptor.hpp
gui/: CMakeLists.txt  calceditedit.cpp  calceditedit.h  example_001.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
plot/: CMakeLists.txt  example_001.txt  example_002.txt  example_003.txt  example_004.txt  example_005.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qcustomplot.cpp  savewavdialog.cpp  savewavdialog.h  savewavdialog.ui
src/: calcedit.cpp
