cmake_minimum_required(VERSION 3.5)

set(CMAKE_OSX_ARCHITECTURES "x86_64" CACHE INTERNAL "" FORCE)
set(CMAKE_OSX_DEPLOYMENT_TARGET "12.0" CACHE INTERNAL "" FORCE)

set(FLTK_BUILD_TEST OFF CACHE INTERNAL "" FORCE)
set(FLTK_BUILD_EXAMPLES OFF CACHE INTERNAL "" FORCE)
set(FLTK_BUILD_FLUID OFF CACHE INTERNAL "" FORCE)

project(calcedit)

add_subdirectory(gui)
add_subdirectory(plot)

